--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,8 @@
 <h1> <%= @article.title %> </h1>
 <p> <%= @article.body %> </p>
-
+<br>
+<%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure you want to delete this article?" }%>
+<%= link_to "Edit", edit_article_path(@article)%>
+<br>
+<br>
 <%= link_to "<< Back to All Articles", articles_path %>
