--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,4 +5,11 @@
 <%= link_to "Edit", edit_article_path(@article)%>
 <br>
 <br>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form'%>
+
 <%= link_to "<< Back to All Articles", articles_path %>
+
