--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,18 +1,27 @@
 <%= form_for(@article) do |f| %>
 <p>
-<%= f.label :title %>
-<%= f.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title %>
 </p>
+
 <p>
-<%= f.label :body %>
-<%= f.text_area :body %>
+    <%= f.label :body %>
+    <%= f.text_area :body %>
 </p>
+
 <p>
-<%= f.submit %>
+    <%= f.label :tag_list %> <br>
+    <%= f.text_field :tag_list %>
 </p>
+
+<p>
+    <%= f.submit %>
+</p>
+
 <% end %>
 
 <br>
+
 <p>
-<%= link_to "<< Back to all Articles", articles_path %>
+    <%= link_to "<< Back to all Articles", articles_path %>
 </p>
