--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,13 @@
 <h1> <%= @article.title %> </h1>
-<p> <%= @article.body %> </p>
+<p>
+  Tags:
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag_path(tag) %>
+  <% end %>
+</p>
+<%= link_to "All Tags", tags_path%>
+<br>
+<h2> <%= @article.body %> </h2>
 <br>
 <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure you want to delete this article?" }%>
 <%= link_to "Edit", edit_article_path(@article)%>
@@ -10,6 +18,8 @@
 <%= render partial: 'articles/comment', collection: @article.comments %>
 
 <%= render partial: 'comments/form'%>
+<br>
 
 <%= link_to "<< Back to All Articles", articles_path %>
 
+ 
